--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -15,8 +15,13 @@
           animatedZooms: true,
           drawPoints: true,
           title: 'Teplota',
-                    underlayCallback: function(canvas, area, g) {
-
+          showRangeSelector: true,
+          rangeSelectorHeight: 30,
+          rangeSelectorPlotFillColor: 'MediumSlateBlue',
+          rangeSelectorPlotFillGradientColor: 'rgba(123, 104, 238, 0)',
+          colorValue: 0.9,
+          fillAlpha: 0.4,
+          underlayCallback: function(canvas, area, g) {
             canvas.fillStyle = "rgba(255, 255, 102, 1.0)";
 
             function highlight_period(x_start, x_end) {
