--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -29,9 +29,10 @@
         "https://raw.githubusercontent.com/martinrotter/home-temp-server/master/sample-data.csv",
         {
           // Základní věci.
-          title: "Teplota",
+          title: "Temperature",
           legend: "always",
           animatedZooms: true,
+          labelsSeparateLines: true,
           drawPoints: true,
           
           // Zobrazit jen poslední 4 dny.
