--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <script src="dygraph/dygraph.js"></script>
     <link rel="stylesheet" href="dygraph/dygraph.css" />
     
@@ -26,7 +27,7 @@
     <script>
       g = new Dygraph(
         document.getElementById("graph"),
-        "https://raw.githubusercontent.com/martinrotter/home-temp-server/master/sample-data.csv",
+        "http://localhost:3210/data/sample-data.csv",
         {
           // Základní věci.
           title: "Temperature",
