--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -41,8 +41,8 @@
           fillAlpha: 0.4,
           
           series : {
-            'CPU temp': { axis: 'y' },
-            'RAM taken': { axis: 'y2' }
+            'CpuTemp': { axis: 'y' },
+            'MemoryPerc': { axis: 'y2' }
           },
           
           axes: {
