--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -56,10 +56,10 @@
             },
             y2: {
               valueFormatter: function(v) {
-                return v + ' %';
+                return Math.round(v, 1) + ' %';
               },
               axisLabelFormatter: function(v) {
-                return v + ' %';
+                return Math.round(v, 1) + ' %';
               }
             },
           },
