--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -19,7 +19,7 @@
     <script>
       g = new Dygraph(
         document.getElementById("graph_server"),
-        "http://nasicek.hopto.org:3388/data/pc-data-2019-03.csv",
+        "/data/pc-data-2019-03.csv",
         {
           // Základní věci.
           title: "Server (Arch Linux)",
@@ -70,7 +70,7 @@
     <script>
       g = new Dygraph(
         document.getElementById("graph_test"),
-        "http://nasicek.hopto.org:3388/data/sample-data.csv",
+        "/data/sample-data.csv",
         {
           // Základní věci.
           title: "Temperature",
