--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -62,7 +62,8 @@
               },
               axisLabelFormatter: function(v) {
                 return v + ' %';
-              }
+              },
+              valueRange: [0, 100]
             },
           },
         });
