--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -54,7 +54,8 @@
               },
               axisLabelFormatter: function(v) {
                 return v + ' °C';
-              }
+              },
+              valueRange: [0, 100]
             },
             y2: {
               valueFormatter: function(v) {
