--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -25,6 +25,7 @@
         {
           // Základní věci.
           title: "Server (Arch Linux)",
+          labels: [ 'Time', 'CPU temp', 'RAM taken' ]
           legend: "always",
           animatedZooms: false,
           labelsSeparateLines: true,
