--- a/weather-server/index.html
+++ b/weather-server/index.html
@@ -25,7 +25,7 @@
         {
           // Základní věci.
           title: "Server (Arch Linux)",
-          labels: [ 'Time', 'CPU temp', 'RAM taken' ],
+          //labels: [ 'Time', 'CPU temp', 'RAM taken' ],
           legend: "always",
           animatedZooms: false,
           labelsSeparateLines: true,
